# GPT-DB

./: .devcontainer.json  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  install_help.py  pyproject.toml  rename_project.py
.devcontainer/: Dockerfile.dev  README.md  gptdb.pth
.github/workflows/: doc-image-publish.yml  docker-image-publish-openai.yml  docker-image-publish.yml
configs/: gptdb-app-config.example.toml  gptdb-bm25-rag.toml  gptdb-cloud-storage.example.toml  gptdb-graphrag.toml  gptdb-local-glm.toml  gptdb-local-llama-cpp-server.toml  gptdb-local-llama-cpp.toml  gptdb-local-mlx.toml  gptdb-local-qwen.toml  gptdb-local-qwen3.example.toml  gptdb-local-vllm.toml  gptdb-proxy-aimlapi.toml  gptdb-proxy-burncloud.toml  gptdb-proxy-deepseek.toml  gptdb-proxy-infiniai.toml  gptdb-proxy-ollama.toml  gptdb-proxy-openai.toml  gptdb-proxy-siliconflow-mysql.toml  gptdb-proxy-siliconflow.toml  gptdb-proxy-tongyi.toml
docker/base/: Dockerfile  build_image.sh
docker/compose_examples/: ha-cluster-docker-compose.yml
docs/: Dockerfile-deploy  README.md  docusaurus.config.js  sidebars.js
docs/blog/: 2024-09-04-gptdb-v0.6.0-Defining new standards for AI-native data applications.md  2025-03-24-gptdb-v0.7.0-release.md  2025-04-29-gpt-db-qwen3-support.md
docs/docs/: quickstart.md
examples/agents/: auto_plan_agent_dialogue_example.py  auto_search_agent.py  awel_layout_agents_chat_examples.py  data_manus.py  db_create.py  mcp_agent_dialogue_example.py  plugin_agent_dialogue_example.py  react_agent_example.py  retrieve_summary_agent_dialogue_example.py  sandbox_code_agent_example.py  single_agent_dialogue_example.py  single_summary_agent_dialogue_example.py  sql_agent_dialogue_example.py
examples/awel/: data_analyst_assistant.py  simple_dag_example.py  simple_nl_schema_sql_chart_example.py  simple_rag_rewrite_example.py  simple_rag_summary_example.py
examples/client/: app_crud_example.py  client_chat_example.py  client_evaluation.py  (+4 more)
gptdb/: __init__.py  component.py
i18n/: Makefile  translate_util.py
requirements/: lint-requirements.txt
scripts/: build_web_static.sh  update_version_all.py
web/: README.md  package-lock.json  package.json
(+416 files in other folders)
