[project]
name = "gptdb-mono"
version = "0.7.4"
description = """GPT-DB is an experimental open-source project that uses localized GPT \
large models to interact with your data and environment. With this solution, you can be\
 assured that there is no risk of data leakage, and your data is 100% private and secure.\
"""
authors = [{ name = "khulnasoft", email = "info@khulnasoft.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
gptdb = { workspace = true }
gptdb-client = { workspace = true }
gptdb-ext = { workspace = true }
gptdb-serve = { workspace = true }
gptdb-app = { workspace = true }
gptdb-acc-auto = { workspace = true }
gptdb-acc-flash-attn = { workspace = true }
gptdb-sandbox = { workspace = true }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.workspace]
members = [
    "packages/gptdb-app",
    "packages/gptdb-client",
    "packages/gptdb-core",
    "packages/gptdb-ext",
    "packages/gptdb-serve",
    "packages/gptdb-sandbox",
    "packages/gptdb-accelerator/gptdb-acc*",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pip",
    "tomli>=2.0.2",
    "tomli-w>=1.1.0",
    "pytest>=7.0.0",
    "pytest_asyncio",
    "twine",
    "ruff>=0.9.1",
    "pytest-mock>=3.14.0",
    "asynctest>=0.13.0",
    "pytest-integration>=0.2.3",
    "pytest-recording>=0.13.2",
    "pytest-cov>=6.0.0",
    "jupyter",
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
]


[tool.pytest.ini_options]
pythonpath = ["packages"]
addopts = ["--import-mode=importlib"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
# Format docstrings
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enable: eror check, import order
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
# Specify the local modules (first-party)
known-first-party = [
    "gptdb",
    "gptdb_acc_auto",
    "gptdb_client",
    "gptdb_ext",
    "gptdb_serve",
    "gptdb_app",
    "gptdb_sandbox",
]
